MosipNexus/k8s/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-api
  namespace: mosip-nexus
spec:
  selector:
    app: nexus-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-ui
  namespace: mosip-nexus
spec:
  selector:
    app: nexus-ui
  ports:
    - name: http
      port: 8501
      targetPort: 8501
